--- a/CoreAndFood/Views/Chart/GetStatistics.cshtml
+++ b/CoreAndFood/Views/Chart/GetStatistics.cshtml
@@ -145,7 +145,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                 <div class="icon-text">
                     <h3>@ViewBag.d12</h3>
-                    <p>Max Price Fodd</p>
+                    <p>Max Price Food</p>
                 </div>
                 <div class="clearfix"></div>
             </div>
