--- a/CoreAndFood/Views/Shared/_Layout.cshtml
+++ b/CoreAndFood/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                 <li><a href="/chart/index3">Google Dynamic Chart</a></li>
                 <li><a href="#">Popup</a></li>
                 <li><a href="/chart/getstatistics">Statistics</a></li>
-                <li><a href="#">Settings</a></li>
+                <li><a href="/default/index">Show Website</a></li>
                 <li><a href="/login/logout">Log Out</a></li>
             </ul>
         </div>
